# ReddiChat

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.sh  test-stream.html  test_api_client.py  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
api/: index.py  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  redidchat.db
backend/app/: main.py
backend/app/agents/: __init__.py  chat_agent.py  system_prompt.py
backend/app/core/: config.py  database.py  logger.py
backend/app/dependencies/: auth.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: __init__.py  chat.py  file_attachment.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  chat_history.py  file_test.py  reddit.py
backend/app/schemas/: __init__.py  auth.py  chat.py  file_attachment.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  chat_service_multimodal.py  email_service.py  file_service.py  s3_service.py
backend/app/templates/: email_templates.py
backend/app/tools/: __init__.py  reddit_tool.py  web_search_tool.py
backend/docs/: CHANGELOG.md  README.md  auth-api.md  chat-api.md  chat-history-api.md  development.md  email-service.md  web-search-tool.md
backend/tests/: test_auth.py  test_chat_history.py
deployment/: README.md  deploy.sh
docs/prd/: TEMPLATE.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v2.0.0.md  v2.1.0.md
frontend/: .dockerignore  .env.example  .env.local.example  .env.prod  .gitignore  Dockerfile  ErrorBoundary.jsx  bun.lockb  index.html  main.jsx  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  test-chat.html  test-network.html  vite.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: logger.ts  (+8 more)
(+113 files in other folders)
