[project]
name = "reddichat"
version = "0.1.0"
description = "ReddiChat - Chat APIs with FastAPI, SQLAlchemy, and LangGraph"
requires-python = ">=3.12"

[project.scripts]
app = "backend.app.main:app"

dependencies = [
    "fastapi[all]>=0.116.1",
    "sqlalchemy>=2.0.0",
    "langgraph>=0.0.8",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.0.0",
    "python-jose>=3.3.0",
    "loguru>=0.7.3",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.40.25",
    "google-genai>=1.33.0",
    "openai>=1.106.1",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.12.15",
    "requests>=2.32.5",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.29",
]
